--- a/index.html
+++ b/index.html
@@ -6,8 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="./script.js" defer></script>
+    <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-    
+<body style="background-color: black;">
+    <div class="calculator-container operators">
+        <button class="operator-button divide">/</button>
+        <button class="operator-button add">+</button>
+        <button class="operator-button subtract">-</button>
+        <button class="operator-button multiply">*</button>
+        <button class="operator-button equals">=</button>
+    </div>
+    <div class="calculator-container numbers">
+        <button class="number-button 7">7</button>
+        <button class="number-button 8">8</button>
+        <button class="number-button 9">9</button>
+        <button class="number-button 4">4</button>
+        <button class="number-button 5">5</button>
+        <button class="number-button 6">6</button>
+        <button class="number-button 1">1</button>
+        <button class="number-button 2">2</button>
+        <button class="number-button 3">3</button>
+        <button class="number-button 0">0</button>
+    </div>
 </body>
 </html>
