Add display container, display screen and clear button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body style="background-color: black;">
+    <div class="calculator-container display">
+        <span class="display-screen">0000</span>
+        <button class="functional-clear-button">clear</button>
+    </div>
     <div class="calculator-container operators">
         <button class="operator-button divide">/</button>
         <button class="operator-button add">+</button>
