Add display elements, testing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 <body style="background-color: black;">
     <div class="calculator-container display">
-        <span class="display-screen">0</span>
+        <div class="display-screen">
+            <div class="display-aNum"></div>
+            <div class="display-operator"></div>
+            <div class="display-bNum"></div>
+        </div>
         <button class="functional-clear-button">clear</button>
     </div>
     <div class="calculator-container operators">
