--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body style="background-color: black;">
     <div class="calculator-container display">
         <div class="display-screen">
-            <div class="display-aNum"></div>
-            <div class="display-operator"></div>
-            <div class="display-bNum"></div>
+            <div class="display-aNum">0</div>
+            <div class="display-operator">0</div>
+            <div class="display-bNum">0</div>
         </div>
-        <button class="functional-clear-button">clear</button>
+        <button class="clear-button">clear</button>
     </div>
     <div class="calculator-container operators">
         <button class="operator-button divide">/</button>
