--- a/index.html
+++ b/index.html
@@ -10,19 +10,16 @@
 </head>
 <body style="background-color: black;">
     <div class="calculator-container display">
-        <div class="display-screen">
-            <div class="display-aNum">0</div>
-            <div class="display-operator">0</div>
-            <div class="display-bNum">0</div>
-        </div>
-        <button class="clear-button">clear</button>
+        <div class="display-screen"></div>
+        <button class="clear-button">AC</button>
+        <button class="clear-button">C</button>
     </div>
     <div class="calculator-container operators">
         <button class="operator-button divide">/</button>
+        <button class="operator-button multiply">*</button>
         <button class="operator-button add">+</button>
         <button class="operator-button subtract">-</button>
-        <button class="operator-button multiply">*</button>
-        <button class="operator-button equals">=</button>
+        <button class="equals">=</button>
     </div>
     <div class="calculator-container numbers">
         <button class="number-button 7">7</button>
@@ -35,6 +32,7 @@
         <button class="number-button 2">2</button>
         <button class="number-button 3">3</button>
         <button class="number-button 0">0</button>
+        <button class="number-button dot">.</button>
     </div>
 </body>
 </html>
