--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="calculator-container display">
         <div class="display-screen"></div>
         <button class="clear-button">AC</button>
-        <button class="clear-button">C</button>
+        <button class="delete-button">C</button>
+        <!-- <button class="pos-neg-button">+<br>-</button> -->
     </div>
     <div class="calculator-container operators">
         <button class="operator-button divide">/</button>
