Sort calculator containers

--- a/index.html
+++ b/index.html
@@ -9,21 +9,26 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body style="background-color: black;">
-    <div class="calculator-container display">
-        <div class="display-screen"></div>
-    </div>
-    <div class="calculator-container display-buttons">
-        <button class="clear-button">AC</button>
-        <button class="delete-button">C</button>
-        <!-- <button class="pos-neg-button">+<br>-</button> -->
-    </div>
+
     <div class="calculator-container body">
+        
+        <div class="calculator-container display">
+            <div class="display-screen"></div>
+        </div>
+
+        <div class="calculator-container display-buttons">
+            <button class="clear-button">AC</button>
+            <button class="delete-button">C</button>
+            <!-- <button class="pos-neg-button">+<br>-</button> -->
+        </div>
+
         <div class="calculator-container operators">
-            <button cllass="operator-button divide">/</button>
+            <button class="operator-button divide">/</button>
             <button class="operator-button multiply">*</button>
             <button class="operator-button add">+</button>
             <button class="operator-button subtract">-</button>
         </div>
+
         <div class="calculator-container numbers">
             <button class="number-button 7">7</button>
             <button class="number-button 8">8</button>
@@ -38,6 +43,7 @@
             <button class="number-button dot">.</button>
             <button class="equals">=</button>
         </div>
+
     </div>
 </body>
 </html>
