--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body style="background-color: black;">
 
     <div class="calculator-container body">
-        
+
         <div class="calculator-container display">
             <div class="display-screen"></div>
         </div>
@@ -22,26 +22,30 @@
             <!-- <button class="pos-neg-button">+<br>-</button> -->
         </div>
 
-        <div class="calculator-container operators">
-            <button class="operator-button divide">/</button>
-            <button class="operator-button multiply">*</button>
-            <button class="operator-button add">+</button>
-            <button class="operator-button subtract">-</button>
-        </div>
+        <div class="calculator-container operators-numbers">
 
-        <div class="calculator-container numbers">
-            <button class="number-button 7">7</button>
-            <button class="number-button 8">8</button>
-            <button class="number-button 9">9</button>
-            <button class="number-button 4">4</button>
-            <button class="number-button 5">5</button>
-            <button class="number-button 6">6</button>
-            <button class="number-button 1">1</button>
-            <button class="number-button 2">2</button>
-            <button class="number-button 3">3</button>
-            <button class="number-button 0">0</button>
-            <button class="number-button dot">.</button>
-            <button class="equals">=</button>
+            <div class="calculator-container numbers">
+                <button class="number-button 7">7</button>
+                <button class="number-button 8">8</button>
+                <button class="number-button 9">9</button>
+                <button class="number-button 4">4</button>
+                <button class="number-button 5">5</button>
+                <button class="number-button 6">6</button>
+                <button class="number-button 1">1</button>
+                <button class="number-button 2">2</button>
+                <button class="number-button 3">3</button>
+                <button class="number-button 0">0</button>
+                <button class="number-button dot">.</button>
+                <button class="equals">=</button>
+            </div>
+
+            <div class="calculator-container operators">
+                <button class="operator-button divide">/</button>
+                <button class="operator-button multiply">*</button>
+                <button class="operator-button add">+</button>
+                <button class="operator-button subtract">-</button>
+            </div>
+            
         </div>
 
     </div>
